--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         position: absolute;
         bottom: 8rem;
         font-size: 34px;
+        margin-top: 10px;
     }
     .frem h5{
         position: absolute;
